# bba

./: .gitmodules  Cargo.toml  README.markdown
src/: bba.rs  bba_init_proof.rs  bba_open_proof.rs  bba_update_proof.rs  endo.rs  fft.rs  main.rs  proof_system.rs  random_oracle.rs  schnorr.rs  util.rs
