[package]
name = "brave-poc"
version = "0.1.0"
authors = ["Izaak Meckler <ihmeckler@gmail.coom>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oracle = { path = "./marlin/oracle" }
groupmap = { path = "./marlin/zexe/groupmap" }
algebra = { path = "./marlin/zexe/algebra", features = [ "parallel", "pasta", "asm" ] }
commitment_dlog = { path = "./marlin/dlog/commitment" }
plonk_5_wires_protocol_dlog = { path = "./marlin/dlog/plonk-5-wires" }
plonk_5_wires_circuits = { path = "./marlin/circuits/plonk-5-wires" }

ff-fft = { path = "./marlin/zexe/ff-fft" }

rand_core = "0.5"
array-init = "0.1.1"

rayon = { version = "1" }
