[package]
name = "brave-poc"
version = "0.1.0"
authors = ["Izaak Meckler <ihmeckler@gmail.coom>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oracle = { git = "https://github.com/o1-labs/proof-systems" }
groupmap= { git = "https://github.com/o1-labs/zexe" }
algebra = { git = "https://github.com/o1-labs/zexe", features = [ "parallel", "pasta", "asm" ] }
commitment_dlog = { git = "https://github.com/o1-labs/proof-systems" }
plonk_protocol_dlog = {  git = "https://github.com/o1-labs/proof-systems" }
plonk_circuits = {  git = "https://github.com/o1-labs/proof-systems" }

ff-fft = { git = "https://github.com/o1-labs/zexe" }

rand_core = "0.5"
array-init = "0.1.1"

rayon = { version = "1" }
