[package]
name = "brave-poc"
version = "0.1.0"
authors = ["Izaak Meckler <ihmeckler@gmail.coom>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.3.0", features = ["parallel"] }
ark-serialize = "0.3.0"
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-poly = { version = "0.3.0", features = ["parallel"] }

# proof-systems
commitment_dlog = { path = "./proof-systems/poly-commitment" }
groupmap = { path = "./proof-systems/groupmap" }
mina-curves = { path = "./proof-systems/curves" }
oracle = { path = "./proof-systems/oracle" }
kimchi = { path = "./proof-systems/kimchi" }

rand = { version = "0.8.0" }
array-init = "2.0.0"

rayon = { version = "1" }

itertools = "0.10.3"